--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormImovel.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormImovel.fxml
@@ -20,7 +20,7 @@
                         </Label>
                      </children></HBox>
                   <Separator prefWidth="200.0" />
-                  <HBox alignment="CENTER_LEFT" prefHeight="75.0" prefWidth="200.0">
+                  <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0">
                      <children>
                         <VBox alignment="CENTER_LEFT" prefHeight="75.0" prefWidth="263.0">
                             <Label prefHeight="17.0" prefWidth="50.0" text="CIDADE" />
@@ -42,7 +42,7 @@
                              </HBox.margin>
                          </VBox>
                      </children></HBox>
-                   <HBox alignment="CENTER_LEFT" prefHeight="75.0" prefWidth="200.0">
+                   <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0">
                        <children>
                            <VBox alignment="CENTER_LEFT" prefHeight="75.0" prefWidth="263.0">
                                <Label prefHeight="17.0" prefWidth="88.0" text="LOGRADOURO" />
@@ -60,24 +60,34 @@
                            </VBox>
                        </children>
                    </HBox>
-                   <HBox alignment="CENTER_LEFT" prefHeight="75.0" prefWidth="200.0">
+                   <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0">
                        <children>
                            <VBox alignment="CENTER_LEFT" prefHeight="75.0" prefWidth="263.0">
                                <Label prefHeight="17.0" prefWidth="88.0" text="NUMERO" />
-                               <TextField fx:id="logradouroField" prefHeight="19.0" prefWidth="262.0" promptText="Numero" />
+                               <TextField fx:id="numeroField" prefHeight="19.0" prefWidth="262.0" promptText="Numero" />
                                <HBox.margin>
                                    <Insets left="10.0" />
                                </HBox.margin>
                            </VBox>
                            <VBox alignment="CENTER_LEFT" prefHeight="75.0" prefWidth="227.0">
                                <Label prefHeight="17.0" prefWidth="108.0" text="COMPLEMENTO" />
-                               <TextField fx:id="ufField" prefHeight="25.0" prefWidth="180.0" promptText="Complemeto" />
+                               <TextField fx:id="complementoField" prefHeight="24.0" prefWidth="227.0" promptText="Complemeto" />
                                <HBox.margin>
                                    <Insets left="50.0" />
                                </HBox.margin>
                            </VBox>
                        </children>
                    </HBox>
+                  <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="50.0">
+                     <children>
+                        <Button mnemonicParsing="false" text="Button" />
+                        <Button mnemonicParsing="false" text="Button" />
+                        <Button mnemonicParsing="false" text="Button" />
+                     </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </HBox>
                </children>
             </VBox>
             <VBox prefHeight="200.0" prefWidth="100.0" visible="false" />
