--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormImovel.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormImovel.fxml
@@ -9,7 +9,7 @@
    <center>
       <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox fx:id="etapa1" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+            <VBox fx:id="etapa1" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" visible="false">
                <children>
                   <HBox alignment="CENTER" prefHeight="80.0" prefWidth="200.0">
                      <children>
@@ -80,9 +80,26 @@
                    </HBox>
                   <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="50.0">
                      <children>
-                        <Button mnemonicParsing="false" text="Button" />
-                        <Button mnemonicParsing="false" text="Button" />
-                        <Button mnemonicParsing="false" text="Button" />
+                        <StackPane prefHeight="75.0" prefWidth="602.0">
+                           <children>
+                              <HBox alignment="CENTER" prefHeight="75.0" prefWidth="344.0" spacing="50.0">
+                                 <children>
+                                    <Button mnemonicParsing="false" style="-fx-background-color: #329FF0;" text="Endereço" />
+                                    <Button mnemonicParsing="false" text="Comodos" />
+                                    <Button mnemonicParsing="false" text="Informaçoes" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_RIGHT" prefHeight="75.0" prefWidth="442.0">
+                                 <children>
+                                    <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="74.0" style="-fx-background-color: #40CF2D; -fx-border-color: black;" text="Salvar">
+                                       <HBox.margin>
+                                          <Insets right="20.0" />
+                                       </HBox.margin>
+                                    </Button>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </StackPane>
                      </children>
                      <opaqueInsets>
                         <Insets />
@@ -90,7 +107,47 @@
                   </HBox>
                </children>
             </VBox>
-            <VBox prefHeight="200.0" prefWidth="100.0" visible="false" />
+            <VBox prefHeight="200.0" prefWidth="100.0">
+             <HBox alignment="CENTER" prefHeight="80.0" prefWidth="200.0">
+                 <children>
+                     <Label text="Comodos">
+                         <font>
+                             <Font name="Arial Black" size="24.0" />
+                         </font>
+                     </Label>
+                 </children></HBox>
+             <Separator prefWidth="200.0" />
+               <HBox prefHeight="75.0" prefWidth="200.0" />
+
+
+                <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="50.0">
+                    <children>
+                        <StackPane prefHeight="75.0" prefWidth="602.0">
+                            <children>
+                                <HBox alignment="CENTER" prefHeight="75.0" prefWidth="344.0" spacing="50.0">
+                                    <children>
+                                        <Button mnemonicParsing="false" text="Endereço" />
+                                        <Button mnemonicParsing="false" style="-fx-background-color: #329FF0;" text="Comodos" />
+                                        <Button mnemonicParsing="false" text="Informaçoes" />
+                                    </children>
+                                </HBox>
+                                <HBox alignment="CENTER_RIGHT" prefHeight="75.0" prefWidth="442.0">
+                                    <children>
+                                        <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="74.0" style="-fx-background-color: #40CF2D; -fx-border-color: black;" text="Salvar">
+                                            <HBox.margin>
+                                                <Insets right="20.0" />
+                                            </HBox.margin>
+                                        </Button>
+                                    </children>
+                                </HBox>
+                            </children>
+                        </StackPane>
+                    </children>
+                    <opaqueInsets>
+                        <Insets />
+                    </opaqueInsets>
+                </HBox>
+            </VBox>
          </children>
       </StackPane>
    </center>
