--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/ImovelView.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/ImovelView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane fx:id="root" stylesheets="@/css/clienteStyle.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ImovelController">
+<BorderPane fx:id="root" stylesheets="@/css/clienteStyle.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ImovelController">
     <top>
         <VBox spacing="20.0" BorderPane.alignment="CENTER">
             <padding>
@@ -14,22 +14,23 @@
 
             <!-- Título e botão-->
             <HBox alignment="CENTER_LEFT" spacing="10.0">
-                <Label styleClass="section-title" text="Clientes">
+                <Label styleClass="section-title" text="Imoveis">
                     <font>
                         <Font name="Arial Black" size="15.0" />
                     </font></Label>
-                <Pane HBox.hgrow="ALWAYS" />
+                <Pane prefHeight="35.0" prefWidth="550.0" HBox.hgrow="ALWAYS" />
                 <Button onAction="#abrirNovoImovelModal" styleClass="primary-button" text="➕ Novo Imovel" />
             </HBox>
 
             <!-- Tabela de Clientes-->
             <TableView fx:id="tabelaClientes" prefHeight="400" prefWidth="800.0">
                 <columns>
-                    <TableColumn fx:id="colunaNome" prefWidth="83.0" text="Id" />
-                    <TableColumn fx:id="colunaEmail" prefWidth="316.0" text="Logradoro" />
-                    <TableColumn fx:id="colunaStatus" prefWidth="120" text="Status" />
-               <TableColumn fx:id="colunaImg" prefWidth="89.0" text="Imagens" />
-                    <TableColumn fx:id="colunaAcoes" prefWidth="86.0" text="Ações" />
+                    <TableColumn fx:id="colunaId" prefWidth="83.0" text="Id" />
+                    <TableColumn fx:id="colunaLogradoro" prefWidth="316.0" text="Logradoro" />
+                    <TableColumn fx:id="colunaStatus" prefWidth="144.0" text="Status" />
+               <TableColumn fx:id="colunaImg" prefWidth="84.0" text="Imagens" />
+               <TableColumn fx:id="colunaInfo" prefWidth="85.0" text="Info" />
+                    <TableColumn fx:id="colunaAcoes" prefWidth="87.0" text="Ações" />
                 </columns>
             </TableView>
         </VBox>
