--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/ImovelView.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/ImovelView.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.collections.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -18,12 +20,30 @@
                     <font>
                         <Font name="Arial Black" size="15.0" />
                     </font></Label>
-                <Pane prefHeight="35.0" prefWidth="550.0" HBox.hgrow="ALWAYS" />
+                <Pane maxWidth="100.0" prefWidth="100.0" HBox.hgrow="ALWAYS" />
+                <ComboBox fx:id="comboFiltro" prefHeight="25.0" prefWidth="85.0">
+                    <items>
+                        <FXCollections fx:factory="observableArrayList">
+                            <String fx:value="Logradouro" />
+                            <String fx:value="CEP" />
+                            <String fx:value="Email" />
+                            <String fx:value="Telefone" />
+                            <String fx:value="Status" />
+                        </FXCollections>
+                    </items>
+                </ComboBox>
+                <HBox alignment="CENTER_LEFT" spacing="10">
+                    <TextField fx:id="campoPesquisa" prefHeight="35.0" prefWidth="185.0" promptText="Pesquisar cliente...">
+                        <font>
+                            <Font size="14.0" />
+                        </font></TextField>
+                </HBox>
+                <Pane HBox.hgrow="ALWAYS" />
                 <Button onAction="#abrirNovoImovelModal" styleClass="primary-button" text="➕ Novo Imovel" />
             </HBox>
 
             <!-- Tabela de Clientes-->
-            <TableView fx:id="tabelaClientes" prefHeight="400" prefWidth="800.0">
+            <TableView fx:id="tabelaImovels" prefHeight="400" prefWidth="800.0">
                 <columns>
                     <TableColumn fx:id="colunaId" prefWidth="83.0" text="Id" />
                     <TableColumn fx:id="colunaLogradoro" prefWidth="316.0" text="Logradoro" />
