--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/ConfiguracaoView.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/ConfiguracaoView.fxml
@@ -5,10 +5,13 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ConfiguracaoController">
    <center>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="clienteJson" mnemonicParsing="false" onAction="#prencherBanco" text="Cliente" />
+            <HBox prefHeight="100.0" prefWidth="200.0" />
+            <HBox prefHeight="100.0" prefWidth="200.0" />
+            <HBox prefHeight="100.0" prefWidth="200.0" />
+            <Button fx:id="clienteJson" mnemonicParsing="false" onAction="#prencherBanco" text="E isso" />
          </children>
-      </HBox>
+      </VBox>
    </center>
 </BorderPane>
