--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/ImovelView.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/ImovelView.fxml
@@ -21,7 +21,7 @@
                         <Font name="Arial Black" size="15.0" />
                     </font></Label>
                 <Pane maxWidth="100.0" prefWidth="100.0" HBox.hgrow="ALWAYS" />
-                <ComboBox fx:id="comboFiltro" prefHeight="25.0" prefWidth="85.0">
+                <ComboBox fx:id="comboFiltro" prefHeight="25.0" prefWidth="85.0" promptText="Filtro">
                     <items>
                         <FXCollections fx:factory="observableArrayList">
                             <String fx:value="Logradouro" />
