--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormImovel.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormImovel.fxml
@@ -126,9 +126,9 @@
                             <children>
                                 <HBox alignment="CENTER" prefHeight="75.0" prefWidth="344.0" spacing="50.0">
                                     <children>
-                                        <Button mnemonicParsing="false" onAction="#trocarTela" text="Endereço" />
-                                        <Button mnemonicParsing="false" style="-fx-background-color: #329FF0;" text="Comodos" />
-                                        <Button mnemonicParsing="false" text="Informaçoes" />
+                                        <Button fx:id="btnEndereco"    mnemonicParsing="false" onAction="#trocarTela" text="Endereço" />
+                                        <Button fx:id="btnComodos"     mnemonicParsing="false" onAction="#trocarTela"  style="-fx-background-color: #329FF0;" text="Comodos" />
+                                        <Button fx:id="btnInformacoes" mnemonicParsing="false" onAction="#trocarTela" text="Informaçoes" />
                                     </children>
                                 </HBox>
                                 <HBox alignment="CENTER_RIGHT" prefHeight="75.0" prefWidth="442.0">
@@ -168,8 +168,8 @@
                                  <HBox alignment="CENTER" prefHeight="75.0" prefWidth="344.0" spacing="50.0">
                                      <children>
                                          <Button mnemonicParsing="false" onAction="#trocarTela" text="Endereço" />
-                                         <Button mnemonicParsing="false" style="-fx-background-color: #329FF0;" text="Comodos" />
-                                         <Button mnemonicParsing="false" text="Informaçoes" />
+                                         <Button mnemonicParsing="false" onAction="#trocarTela" style="-fx-background-color: #329FF0;" text="Comodos" />
+                                         <Button mnemonicParsing="false" onAction="#trocarTela" text="Informaçoes" />
                                      </children>
                                  </HBox>
                                  <HBox alignment="CENTER_RIGHT" prefHeight="75.0" prefWidth="442.0">
