--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormImovel.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormImovel.fxml
@@ -80,26 +80,14 @@
                    </HBox>
                   <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="50.0">
                      <children>
-                        <StackPane prefHeight="75.0" prefWidth="602.0">
-                           <children>
-                              <HBox alignment="CENTER" prefHeight="75.0" prefWidth="344.0" spacing="50.0">
-                                 <children>
-                                    <Button mnemonicParsing="false" style="-fx-background-color: #329FF0;" text="Endereço" />
-                                    <Button mnemonicParsing="false" text="Comodos" />
-                                    <Button mnemonicParsing="false" text="Informaçoes" />
-                                 </children>
-                              </HBox>
-                              <HBox alignment="CENTER_RIGHT" prefHeight="75.0" prefWidth="442.0">
-                                 <children>
-                                    <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="74.0" style="-fx-background-color: #40CF2D; -fx-border-color: black;" text="Salvar">
-                                       <HBox.margin>
-                                          <Insets right="20.0" />
-                                       </HBox.margin>
-                                    </Button>
-                                 </children>
-                              </HBox>
-                           </children>
-                        </StackPane>
+                        <Button mnemonicParsing="false" onAction="#trocarTela" style="-fx-background-color: #329FF0;" text="Endereço" userData="endereco" />
+                        <Button mnemonicParsing="false" onAction="#trocarTela" text="Comodos" userData="comodos" />
+                        <Button mnemonicParsing="false" onAction="#trocarTela" text="Informaçoes" userData="info" />
+                        <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="74.0" style="-fx-background-color: #40CF2D; -fx-border-color: black;" text="Salvar">
+                           <HBox.margin>
+                              <Insets right="20.0" />
+                           </HBox.margin>
+                         </Button>
                      </children>
                      <opaqueInsets>
                         <Insets />
@@ -117,31 +105,26 @@
                      </Label>
                  </children></HBox>
              <Separator prefWidth="200.0" />
-               <HBox prefHeight="75.0" prefWidth="200.0" />
+                <HBox prefHeight="100.0" prefWidth="200.0" >
+                    <VBox>
+                    </VBox>
+                </HBox>
+                <HBox prefHeight="100.0" prefWidth="200.0" >
+                    <VBox>
+                    </VBox>
+                </HBox>
 
 
                 <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="50.0">
                     <children>
-                        <StackPane prefHeight="75.0" prefWidth="602.0">
-                            <children>
-                                <HBox alignment="CENTER" prefHeight="75.0" prefWidth="344.0" spacing="50.0">
-                                    <children>
-                                        <Button fx:id="btnEndereco"    mnemonicParsing="false" onAction="#trocarTela" text="Endereço" />
-                                        <Button fx:id="btnComodos"     mnemonicParsing="false" onAction="#trocarTela"  style="-fx-background-color: #329FF0;" text="Comodos" />
-                                        <Button fx:id="btnInformacoes" mnemonicParsing="false" onAction="#trocarTela" text="Informaçoes" />
-                                    </children>
-                                </HBox>
-                                <HBox alignment="CENTER_RIGHT" prefHeight="75.0" prefWidth="442.0">
-                                    <children>
-                                        <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="74.0" style="-fx-background-color: #40CF2D; -fx-border-color: black;" text="Salvar">
-                                            <HBox.margin>
-                                                <Insets right="20.0" />
-                                            </HBox.margin>
-                                        </Button>
-                                    </children>
-                                </HBox>
-                            </children>
-                        </StackPane>
+                        <Button mnemonicParsing="false" onAction="#trocarTela" style="-fx-background-color: #329FF0;" text="Endereço" userData="endereco" />
+                        <Button mnemonicParsing="false" onAction="#trocarTela" text="Comodos" userData="comodos" />
+                        <Button mnemonicParsing="false" onAction="#trocarTela" text="Informaçoes" userData="info" />
+                        <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="74.0" style="-fx-background-color: #40CF2D; -fx-border-color: black;" text="Salvar">
+                            <HBox.margin>
+                                <Insets right="20.0" />
+                            </HBox.margin>
+                        </Button>
                     </children>
                     <opaqueInsets>
                         <Insets />
@@ -151,7 +134,7 @@
              <VBox fx:id="telaInformacoes" prefHeight="200.0" prefWidth="100.0" visible="false">
                  <HBox alignment="CENTER" prefHeight="80.0" prefWidth="200.0">
                      <children>
-                         <Label text="Comodos">
+                         <Label text="Imformaçoes">
                              <font>
                                  <Font name="Arial Black" size="24.0" />
                              </font>
@@ -163,26 +146,14 @@
 
                  <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="50.0">
                      <children>
-                         <StackPane prefHeight="75.0" prefWidth="602.0">
-                             <children>
-                                 <HBox alignment="CENTER" prefHeight="75.0" prefWidth="344.0" spacing="50.0">
-                                     <children>
-                                         <Button mnemonicParsing="false" onAction="#trocarTela" text="Endereço" />
-                                         <Button mnemonicParsing="false" onAction="#trocarTela" style="-fx-background-color: #329FF0;" text="Comodos" />
-                                         <Button mnemonicParsing="false" onAction="#trocarTela" text="Informaçoes" />
-                                     </children>
-                                 </HBox>
-                                 <HBox alignment="CENTER_RIGHT" prefHeight="75.0" prefWidth="442.0">
-                                     <children>
-                                         <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="74.0" style="-fx-background-color: #40CF2D; -fx-border-color: black;" text="Salvar">
-                                             <HBox.margin>
-                                                 <Insets right="20.0" />
-                                             </HBox.margin>
-                                         </Button>
-                                     </children>
-                                 </HBox>
-                             </children>
-                         </StackPane>
+                         <Button mnemonicParsing="false" onAction="#trocarTela" style="-fx-background-color: #329FF0;" text="Endereço" userData="endereco" />
+                         <Button mnemonicParsing="false" onAction="#trocarTela" text="Comodos" userData="comodos" />
+                         <Button mnemonicParsing="false" onAction="#trocarTela" text="Informaçoes" userData="info" />
+                         <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="74.0" style="-fx-background-color: #40CF2D; -fx-border-color: black;" text="Salvar">
+                             <HBox.margin>
+                                 <Insets right="20.0" />
+                             </HBox.margin>
+                         </Button>
                      </children>
                      <opaqueInsets>
                          <Insets />
