feat-view-controller

--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormImovel.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormImovel.fxml
@@ -95,7 +95,7 @@
                   </HBox>
                </children>
             </VBox>
-            <VBox fx:id="telaComodos" prefHeight="200.0" prefWidth="100.0">
+            <VBox fx:id="telaComodos" prefHeight="200.0" prefWidth="100.0" visible="false">
              <HBox alignment="CENTER" prefHeight="80.0" prefWidth="200.0">
                  <children>
                      <Label text="Comodos">
@@ -228,7 +228,7 @@
                     </opaqueInsets>
                 </HBox>
             </VBox>
-             <VBox fx:id="telaInformacoes" prefHeight="200.0" prefWidth="100.0" visible="false">
+             <VBox fx:id="telaInformacoes" prefHeight="200.0" prefWidth="100.0">
                  <HBox alignment="CENTER" prefHeight="80.0" prefWidth="200.0">
                      <children>
                          <Label text="Imformaçoes">
@@ -243,9 +243,9 @@
 
                  <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="50.0">
                      <children>
-                         <Button mnemonicParsing="false" onAction="#trocarTela" style="-fx-background-color: #329FF0;" text="Endereço" userData="endereco" />
+                         <Button mnemonicParsing="false" onAction="#trocarTela" text="Endereço" userData="endereco" />
                          <Button mnemonicParsing="false" onAction="#trocarTela" text="Comodos" userData="comodos" />
-                         <Button mnemonicParsing="false" onAction="#trocarTela" text="Informaçoes" userData="info" />
+                         <Button mnemonicParsing="false" onAction="#trocarTela" style="-fx-background-color: #329FF0;" text="Informaçoes" userData="info" />
                          <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="74.0" style="-fx-background-color: #40CF2D; -fx-border-color: black;" text="Salvar">
                              <HBox.margin>
                                  <Insets right="20.0" />
