--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormImovel.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormImovel.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.collections.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<?import java.lang.String?>
-<?import javafx.collections.FXCollections?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FormImovelController">
    <center>
       <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -240,38 +240,67 @@
                          </Label>
                      </children></HBox>
                  <Separator prefWidth="200.0" />
-                 <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="25.0">
+                 <HBox alignment="CENTER" prefHeight="100.0" prefWidth="600.0" spacing="25.0">
                   <children>
                      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
                         <children>
-                           <Label text="Preço">
+                           <Label prefHeight="16.0" prefWidth="57.0" text="Preço">
                               <font>
                                  <Font name="Arial" size="14.0" />
                               </font>
                            </Label>
-                           <TextField prefHeight="26.0" prefWidth="102.0" />
+                           <TextField prefHeight="26.0" prefWidth="151.0" />
                         </children>
                      </HBox>
                      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
                         <children>
-                           <Label text="Label">
+                           <Label text="Status">
                               <font>
                                  <Font name="Arial" size="14.0" />
                               </font>
                            </Label>
-                            <ChoiceBox prefHeight="26.0" prefWidth="102.0" >
+                            <ChoiceBox prefHeight="26.0" prefWidth="102.0">
                                 <items>
                                     <FXCollections fx:factory="observableArrayList">
-                                        <String fx:value="DISPONIVEL"/>
-                                        <String fx:value="NEGOCIAÇÃO"/>
-                                        <String fx:value="VENDIDO"/>
-                                        <String fx:value="ALUGADO"/>
+                                        <String fx:value="DISPONIVEL" />
+                                        <String fx:value="NEGOCIAÇÃO" />
+                                        <String fx:value="VENDIDO" />
+                                        <String fx:value="ALUGADO" />
                                     </FXCollections>
                                 </items>
                             </ChoiceBox>
                         </children>
                      </HBox>
                   </children></HBox>
+               <HBox alignment="CENTER" layoutX="10.0" layoutY="93.0" prefHeight="103.0" prefWidth="600.0" spacing="25.0">
+                  <children>
+                     <HBox alignment="TOP_CENTER" prefHeight="126.0" prefWidth="243.0" spacing="10.0">
+                        <children>
+                           <Label text="Funcionario">
+                              <font>
+                                 <Font name="Arial" size="14.0" />
+                              </font>
+                           </Label>
+                           <VBox alignment="TOP_CENTER" prefHeight="109.0" prefWidth="150.0">
+                              <children>
+                                  <TextField fx:id="campoFuncionario" prefHeight="26.0" prefWidth="129.0" />
+                                  <ListView fx:id="listaSugestoes" managed="false" visible="false" />
+                              </children>
+                           </VBox>
+                        </children>
+                     </HBox>
+                     <HBox alignment="TOP_CENTER" prefHeight="126.0" prefWidth="215.0" spacing="10.0">
+                        <children>
+                           <Label text="Data Criação">
+                              <font>
+                                 <Font name="Arial" size="14.0" />
+                              </font>
+                           </Label>
+                           <DatePicker fx:id="data" editable="false" prefHeight="26.0" prefWidth="102.0" />
+                        </children>
+                     </HBox>
+                  </children>
+               </HBox>
 
 
                  <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="50.0">
