--- a/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormVisita.fxml
+++ b/CRMdeImobiliaria/src/main/resources/sceneBuilder/FormVisita.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" stylesheets="@/css/clienteStyle.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FormVisitaController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="514.0" stylesheets="@/css/clienteStyle.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FormVisitaController">
     <children>
         <HBox alignment="CENTER_LEFT" prefHeight="80.0" prefWidth="200.0">
             <children>
@@ -46,29 +46,29 @@
          <VBox.margin>
             <Insets left="10.0" />
          </VBox.margin></HBox>
-        <VBox prefHeight="137.0" prefWidth="380.0">
+        <HBox alignment="CENTER" spacing="20.0">
+        <VBox prefHeight="101.0" prefWidth="215.0">
             <children>
                 <Label text="NOME CLIENTE*" />
-                <TextField fx:id="campoCliente" promptText="👤 Nome Completo do Cliente">
-                    <VBox.margin>
-                        <Insets />
-                    </VBox.margin></TextField>
-            <ListView fx:id="listaSugestoesCliente" prefHeight="62.0" prefWidth="380.0" />
+                <TextField fx:id="campoCliente" promptText="👤 Nome Completo do Cliente" />
+                <ListView fx:id="listaSugestoesCliente" prefHeight="62.0" prefWidth="380.0" />
+
             </children>
             <VBox.margin>
                 <Insets left="10.0" right="10.0" />
             </VBox.margin>
         </VBox>
-        <VBox layoutX="10.0" layoutY="10.0" prefHeight="145.0" prefWidth="380.0">
+        <VBox layoutX="10.0" layoutY="10.0" prefHeight="64.0" prefWidth="215.0">
             <children>
                 <Label text="NOME FUNCIONARIO*" />
-                <TextField fx:id="campoFuncionario" promptText="👤 Nome Completo do Funcionario" />
+                <TextField fx:id="campoFuncionario" prefHeight="25.0" prefWidth="204.0" promptText="👤 Nome Completo do Funcionario" />
+                <ListView fx:id="listaSugestoesFunc" prefHeight="59.0" prefWidth="219.0" />
             </children>
-            <ListView fx:id="listaSugestoesFunc" prefHeight="200.0" prefWidth="200.0" />
             <VBox.margin>
                 <Insets left="10.0" right="10.0" />
             </VBox.margin>
         </VBox>
+        </HBox>
         <VBox layoutX="10.0" layoutY="210.0" prefHeight="131.0" prefWidth="380.0">
             <children>
                 <Label text="DATA" />
